[package]
name = "battrs"
version = "0.2.0"
authors = ["Danny Hadley <dadleyy@gmail.com>"]
edition = "2018"
license = "MIT"
homepage = "https://github.com/dadleyy/battrs"
repository = "https://github.com/dadleyy/battrs.git"
description = "Battery level information"

[lib]
name = "battrs"
path = "src/lib.rs"

[[bin]]
name = "battrs"
path = "src/bin/main.rs"
